@@ -1,1 +1,12 @@
 # doom-fire
+
+My colleague created the implementation based on the following article:
+https://fabiensanglard.net/doom_fire_psx/index.html
+
+I've tweaked the look of fire and implemented the fire extinction.
+
+Run:
+VM args:
+~~~
+--module-path C:/Users/{path-to-javafx-sdk}/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml
+~~~
